--- a/app/src/main/res/layout/dialog_add_edit_product.xml
+++ b/app/src/main/res/layout/dialog_add_edit_product.xml
@@ -23,12 +23,14 @@
                     android:gravity="right"
                     android:background="@color/colorPrimary"
                     android:padding="50dp">
+
                     <LinearLayout android:id="@+id/llNext"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:padding="10dp">
+                        android:padding="10dp"
+                        android:visibility="gone">
                         <ImageView
                             android:layout_width="40dp"
                             android:layout_height="40dp"
@@ -45,6 +47,29 @@
                     </LinearLayout>
 
 
+                    <LinearLayout android:id="@+id/llSaveWithoutMeasure"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:padding="10dp"
+                        android:visibility="visible">
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@drawable/ic_save"
+                            android:tint="@color/white"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Save"
+                            android:gravity="center_vertical"
+                            android:textStyle="bold"
+                            android:textColor="@color/white"
+                            android:textSize="18sp"/>
+                    </LinearLayout>
+
+
                 </LinearLayout>
 
 
@@ -53,6 +78,23 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="50dp">
+
+
+                    <LinearLayout android:id="@+id/llProgressWithoutMeasure"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:visibility="invisible">
+                        <ProgressBar
+                            android:layout_width="40dp"
+                            android:layout_height="40dp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="guardando..."
+                            android:gravity="center_vertical"/>
+                    </LinearLayout>
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -114,13 +156,69 @@
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name"
+                        android:hint="Nombre"
                         android:layout_marginTop="10dp">
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/etName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Precio"
+                        android:layout_marginTop="10dp">
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/etPrice"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="numberDecimal"
+                            android:selectAllOnFocus="true"/>
+                    </android.support.design.widget.TextInputLayout>
+
+
+                    <LinearLayout android:id="@+id/llRangeWithoutMeasure"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <CheckBox android:id="@+id/cbActiveRangeWithoutMeasure"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rango "
+                            android:layout_gravity="center_vertical"/>
+
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:hint="Min"
+                            android:layout_marginLeft="10dp">
+                            <android.support.design.widget.TextInputEditText
+                                android:id="@+id/etMinWithoutMeasure"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="numberDecimal"
+                                android:selectAllOnFocus="true"/>
+                        </android.support.design.widget.TextInputLayout>
+
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:hint="Max"
+                            android:layout_marginLeft="20dp">
+                            <android.support.design.widget.TextInputEditText
+                                android:id="@+id/etMaxWithoutMeasure"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="numberDecimal"
+                                android:selectAllOnFocus="true"/>
+                        </android.support.design.widget.TextInputLayout>
+
+
+                    </LinearLayout>
 
 
                 </LinearLayout>
@@ -319,6 +417,8 @@
 
 
                         </LinearLayout>
+
+
                         <android.support.v7.widget.CardView
                             android:layout_width="100dp"
                             android:layout_height="50dp"
