--- a/app/src/main/res/layout/product_row_edition.xml
+++ b/app/src/main/res/layout/product_row_edition.xml
@@ -26,84 +26,107 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <TextView android:layout_width="0dp"
+                    <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Code:"
                         android:textStyle="bold"
                         android:gravity="center_vertical"
-                        android:textSize="16sp"
-                        android:layout_weight="3"/>
+                        android:textSize="16sp"/>
                     <TextView android:id="@+id/tvCode"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="0005"
+                        android:text=""
                         android:textStyle="bold"
                         android:layout_weight="10"
                         android:gravity="center_vertical"
-                        android:textSize="16sp"/>
+                        android:textSize="16sp"
+                        android:paddingLeft="5dp"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <TextView android:layout_width="0dp"
+                    <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Name:"
                         android:textStyle="bold"
                         android:gravity="center_vertical"
-                        android:textSize="16sp"
-                        android:layout_weight="3"/>
+                        android:textSize="16sp"/>
                     <TextView android:id="@+id/tvDescription"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Product Name"
                         android:textStyle="bold"
                         android:layout_weight="10"
-                        android:gravity="center_vertical"
-                        android:textSize="16sp"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="Familia:"
-                        android:textStyle="bold"
                         android:gravity="center_vertical"
                         android:textSize="16sp"
-                        android:layout_weight="3"/>
-                    <TextView android:id="@+id/tvFamily"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="Familia"
-                        android:textStyle="bold"
-                        android:layout_weight="10"
-                        android:gravity="center_vertical"
-                        android:textSize="16sp"/>
+                        android:paddingLeft="5dp"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <TextView android:layout_width="0dp"
+
+                        <TextView android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Familia: "
+                            android:textStyle="bold"
+                            android:gravity="center_vertical"
+                            android:textSize="16sp"/>
+
+                        <TextView android:id="@+id/tvFamily"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:textSize="16sp"
+                            android:paddingLeft="5dp"/>
+
+                    <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Grupo:"
                         android:textStyle="bold"
                         android:gravity="center_vertical"
-                        android:textSize="16sp"
-                        android:layout_weight="3"/>
+                        android:textSize="16sp"/>
+
                     <TextView android:id="@+id/tvGroup"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Grupo"
                         android:textStyle="bold"
-                        android:layout_weight="10"
+                        android:layout_weight="1"
                         android:gravity="center_vertical"
-                        android:textSize="16sp"/>
+                        android:textSize="16sp"
+                        android:paddingLeft="5dp"/>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Status:"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        android:paddingRight="5dp"
+                        android:gravity="center_vertical"/>
+
+                    <ImageView android:id="@+id/imgStatus"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp" />
+
+                    <TextView android:id="@+id/tvStatus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        android:paddingLeft="5dp"
+                        android:gravity="center_vertical"/>
                 </LinearLayout>
 
 
