--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp">
 
     <LinearLayout android:id="@+id/llLoading"
         android:layout_width="match_parent"
@@ -176,6 +177,14 @@
 
         </LinearLayout>
 
+        <TextView android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Ventas"
+            android:padding="20dp"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
+
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -183,25 +192,26 @@
 
             <TableRow android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="10dp">
+                android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Ventas:"/>
+                    android:text="Ventas:"
+                    android:visibility="gone"/>
 
                 <EditText android:id="@+id/etSalesCount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:focusableInTouchMode="false"/>
+                    android:focusableInTouchMode="false"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Total Ventas:"
+                    android:text="Ventas:"
                     android:paddingLeft="10dp"/>
 
                 <EditText android:id="@+id/etSalesAmount"
@@ -223,19 +233,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Ventas Anuladas"/>
+                    android:text="Ventas Anuladas"
+                    android:visibility="gone"/>
 
                 <EditText android:id="@+id/etAnulatedReceiptsCount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:focusableInTouchMode="false"/>
+                    android:focusableInTouchMode="false"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Total Anulado:"
+                    android:text="Ventas Reversadas:"
                     android:paddingLeft="10dp"/>
 
                 <EditText android:id="@+id/etAnulatedReceiptsAmount"
@@ -258,13 +270,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Descuentos:"/>
+                    android:text="Descuentos:"
+                    android:visibility="gone"/>
 
                 <EditText android:id="@+id/etDiscount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:focusableInTouchMode="false"/>
+                    android:focusableInTouchMode="false"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -283,43 +297,18 @@
             </TableRow>
 
 
+            <TextView android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Caja"
+                android:padding="20dp"
+                android:textSize="25sp"
+                android:textStyle="bold"/>
+
 
             <TableRow android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="30dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="Pagos:"/>
-
-                <EditText android:id="@+id/etPaymentCount"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:focusableInTouchMode="false"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="Total Pagos:"
-                    android:paddingLeft="10dp"/>
-
-                <EditText android:id="@+id/etTotalPayments"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:focusableInTouchMode="false"/>
-
-
-            </TableRow>
-
-            <TableRow android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="10dp">
+                android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -330,7 +319,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:focusableInTouchMode="false"/>
+                    android:focusableInTouchMode="false"
+                    android:gravity="center"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -342,8 +332,9 @@
                 <EditText android:id="@+id/etCashAmount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:focusableInTouchMode="false"/>
+                    android:layout_weight="3"
+                    android:focusableInTouchMode="false"
+                    android:gravity="right"/>
 
 
             </TableRow>
@@ -357,29 +348,32 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Pagos Credito:"/>
+                    android:text="Pagos T. Credito:"/>
 
                 <EditText android:id="@+id/etCreditCount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:focusableInTouchMode="false"/>
+                    android:focusableInTouchMode="false"
+                    android:gravity="center"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Total Pagos Credito:"
+                    android:text="Total Pagos T. Credito:"
                     android:paddingLeft="10dp"/>
 
                 <EditText android:id="@+id/etCreditAmount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:focusableInTouchMode="false"/>
+                    android:layout_weight="3"
+                    android:focusableInTouchMode="false"
+                    android:gravity="right"/>
 
 
             </TableRow>
+
 
 
 
@@ -392,27 +386,96 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Devoluciones:"/>
+                    android:text="Pagos:"/>
 
-                <EditText android:id="@+id/etTotalDevs"
+                <EditText android:id="@+id/etPaymentCount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:focusableInTouchMode="false"/>
+                    android:focusableInTouchMode="false"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|right"
+                    android:text="Total Pagos:"
+                    android:paddingLeft="10dp" />
+
+                <EditText android:id="@+id/etTotalPayments"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:focusableInTouchMode="false"
+                    android:gravity="right"/>
+
+
+            </TableRow>
+
+
+
+            <TableRow android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="10dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="1dp"
+                    android:gravity="center_vertical"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"/>
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
+                    android:gravity="center_vertical|right"
+                    android:text="Devoluciones:" />
+
+                <EditText android:id="@+id/etTotalDevs"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:focusableInTouchMode="false"
+                    android:textColor="@color/red_700"
+                    android:gravity="right"/>
+
+
+            </TableRow>
+
+
+            <TableRow android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="10dp">
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="1dp"
+                    android:gravity="center_vertical"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|right"
                     android:text="Ganancias Netas:"
                     android:paddingLeft="5dp"/>
 
                 <EditText android:id="@+id/etTotalGains"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:focusableInTouchMode="false"/>
+                    android:layout_weight="3"
+                    android:focusableInTouchMode="false"
+                    android:textStyle="bold"
+                    android:gravity="right"/>
 
             </TableRow>
 
